<resources>
    <string name="app_name">PhoneControlledGame</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ConnectButton_text">Connect</string>
    <string name="NameButton_text">Name</string>
    <string name="PinButton_text">PIN</string>
    <string name="ViewValues_text">View values</string>
    <string name="title_activity_view_values">ViewValuesActivity</string>
    <string name="AccelerometerLabel_text">Accelerometer:</string>
    <string name="sensor_zero">0.000000</string>
    <string name="Gyroscope_text">Gyroscope:</string>
    <string name="title_activity_communicate">CommunicateActivity</string>
</resources>
